@@ -1,13 +1,21 @@
-dnssdFactory = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
-options.key = dnssdFactory
-options.1 = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
-options.2 = fr.prima.omiscid.dnssd.jmdns.DNSSDFactoryJmdns
-options.3 = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
-options.4 = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
-options.4.comment = when using avahi, the running user must be kind of allowed to access the avahi dbus. It seems to happen by being in a specific user group (plugdev?) or not (don't know really what is the cause)
-options.5 = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid  
 
-sharedFactory = false
-shared.key = sharedFactory
-shared.key.true = true
+dnssdFactory = mdns
+sharedFactory = true
+
+dnssdFactory.comment = aliases should not contain dot characters
+dnssdFactory.key = dnssdFactory
+dnssdFactory.1 = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
+dnssdFactory.mdns = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
+dnssdFactory.2 = fr.prima.omiscid.dnssd.jmdns.DNSSDFactoryJmdns
+dnssdFactory.jmdns = fr.prima.omiscid.dnssd.jmdns.DNSSDFactoryJmdns
+dnssdFactory.3 = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
+dnssdFactory.omiscid = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
+dnssdFactory.4 = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
+dnssdFactory.avahi = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
+dnssdFactory.4.comment = not 100% operationnal, when using avahi, the running user must be kind of allowed to access the avahi dbus. It seems to happen by being in a specific user group (plugdev?) or not (don't know really what is the cause)
+dnssdFactory.0 = fr.prima.omiscid.dnssd..SmartToBeImpl  
+dnssdFactory.smart = fr.prima.omiscid.dnssd..SmartToBeImpl  
+
+sharedFactory.key = sharedFactory
+sharedFactory.key.true = true
 
